add creature API
